alignment fix

--- a/frontend/src/styles/components/_authorInfoCard.scss
+++ b/frontend/src/styles/components/_authorInfoCard.scss
@@ -9,7 +9,6 @@
         color: $color-primary-700;
         border-radius: var(--border-radius);
         transition: background-color 0.3s ease;
-        margin-bottom: 15px;
         box-sizing: border-box;
 
         .info-row {
